--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #1c1c1e;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #ffb703;
+    border-radius: 100vh;
+  }
+}
