--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #ffb703;
+    background-color: #146ef5;
     border-radius: 100vh;
   }
 }
