--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,9 @@
     @apply rounded-full bg-primary;
   }
 }
+
+.no-arrows::-webkit-outer-spin-button,
+.no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
