--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,3 +21,55 @@
   -webkit-appearance: none;
   margin: 0;
 }
+
+/********* Custom Radio in Payment Page - start *********/
+.custom-radio {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.custom-radio input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.custom-radio input[type="radio"]:checked + .checkmark {
+  background-color: #fff;
+}
+
+.custom-radio .checkmark {
+  position: absolute;
+  top: 2.5px;
+  left: 0;
+  height: 22px;
+  width: 22px;
+  border: 2px solid #146ef5;
+  border-radius: 50%;
+}
+
+.custom-radio .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.custom-radio input[type="radio"]:checked + .checkmark:after {
+  display: block;
+}
+
+.custom-radio .checkmark:after {
+  top: 4px;
+  left: 4px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #146ef5;
+}
+
+/********* Custom Radio in Payment Page - end *********/
